Fix CSS alignment issue

--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -14,10 +14,10 @@
 #main-posts-container {
     width: 70%;
     display: flex;
-    justify-content: center;
-    // border: 1px solid blue;
+    justify-content: space-between;
+    border: 1px solid blue;
     margin-top: 30px;
-    margin-left: 40px;
+    margin-left: 60px;
     margin-right: 60px;
     max-width: 1000px;
 
@@ -28,8 +28,7 @@
     flex-direction: column;
     width: 70%;
     margin-right: 25px;
-    max-width: 620px;
-    // max-width: 700px;
+    max-width: 700px;
 }
 
 #stories-container {
@@ -101,7 +100,8 @@
 
 #post-show-page {
     display: flex;
-    width: 70%;
+    width: 100%;
+
     height: 590px;
     max-width: 820px;
     margin: auto auto;
@@ -112,18 +112,13 @@
 
 #post-show-container {
     display: flex;
-    width: 100%;
+    width: 70%;
 }
 
 #individual-post-photo {
-    width: 60%;
+    width: 100%;
     height: auto;
-    // max-width: 100%;
-    // max-height: 100%;
-    // width: 100%
-    // height: 100%;
     object-fit: contain;
-    // object-fit: cover;
 
 }
 
