--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -11,7 +11,7 @@
 }
 
 #nav-bar {
-    width: 100%;
+    width: 70%;
     max-width: 1000px;
     display: flex;
     justify-content: space-between;
@@ -21,7 +21,6 @@
 #nav-bar-h1 {
     font-family: 'Cookie', cursive;
     font-size: 40px;
-    margin-left: 40px;
     cursor: pointer;
     text-decoration: none;
     color: rgb(38, 38, 38);
@@ -32,7 +31,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-right: 60px;
 }
 
 .nav-bar-icon {
